# markbook

./: LICENCSE  PLAN.md  README.md  pyproject.toml
.claude/: settings.local.json
docs/skills/: SKILL.md  SYNTAX.md
examples/: diabetes.ipynb  diabetes.md
markbook/: cli.py  compiler.py  exceptions.py  watcher.py
markbook/cli/: app.py
markbook/emitter/: __init__.py  notebook.py
markbook/parser/: __init__.py  lexer.py  nodes.py  parser.py  service.py  tokenizer.py  tokens.py  views.py
markbook/parser/nodes/: __init__.py  base.py  chapter.py  code.py  divider.py  frontmatter.py  markdown.py  registry.py  toc.py
test/parser/nodes/: test_chapter.py  test_code.py  test_divider.py  test_frontmatter.py  test_markdown.py  test_toc.py
